--- a/litreview.tex
+++ b/litreview.tex
@@ -95,7 +95,7 @@ The Who}
 %\include{acknowledgments}
 
 %%% Bring in the abstract section from external file
-\include{abstract}
+%\include{abstract}
 
 %%% Generate table of contents
 \tableofcontents
@@ -108,9 +108,11 @@ The Who}
 
 \end{frontmatter}
 
+\include{introduction}
+
 %\normalsize
 %%% Bring in the body of the thesis from external file
-%\include{body}
+\include{body}
 
 %%% Switch to appendix mode
 \appendix
