--- a/litreview.tex
+++ b/litreview.tex
@@ -44,7 +44,7 @@
 %%% Declarations for Front Matter. Capitalize all of these values
 %%% "normally". This allows the document class to format them properly.
 %% Full title of thesis or dissertation, capitalized like a title should be.
-\title{Cloud Based Sensor Data Management: A Literature Review}
+\title{Cloud Based Sensor Big Data Management: A Literature Review}
 %% Your name, capitalized normally. Do not include any titles like Dr.
 \author{Anthony J. Christe}
 %% Month in which you intend to receive your degree (i.e. graduation).
@@ -109,6 +109,7 @@ The Who}
 \end{frontmatter}
 
 \include{introduction}
+
 
 %\normalsize
 %%% Bring in the body of the thesis from external file
