--- a/introduction.tex
+++ b/introduction.tex
@@ -1,1 +1,6 @@
 \chapter{Introduction}
+The exponential increase in volume, variety, velocity, veracity, and value of data has caused us to rethink traditional server architectures when it comes to data acquisition, storage, analysis, quality of data, and governance of data. With the emergence of Internet of Things (IoT) and increasing numbers of ubiquitous mobile sensors such as mobile phones, distributed sensor networks are growing at an unprecedented pace and producing an unprecedented amount of streaming data.
+
+Cloud computing frameworks can provide on-demand availability and scaling of virtual computing resources for storage, processing, and analyzing of very large data sets in real-time or near real-time. This model makes it possible to build applications in the cloud for dealing with Big Data sets such as those produced from large distributed sensor networks. Software for cloud environments include distributed fault-tolerant databases and distributed parallel algorithms for computer clusters. 
+
+By using the cloud as a central sink of data for our devices within a sensor network. 
