--- a/litreview.bib
+++ b/litreview.bib
@@ -1,4 +1,17 @@
 
+@journal{eugster_many_2003,
+	title = {The many faces of publish/subscribe},
+	volume = {35},
+	url = {http://dl.acm.org/citation.cfm?id=857078},
+	pages = {114--131},
+	number = {2},
+	journaltitle = {{ACM} Computing Surveys ({CSUR})},
+	author = {Eugster, Patrick Th and Felber, Pascal A. and Guerraoui, Rachid and Kermarrec, Anne-Marie},
+	urldate = {2016-11-07},
+	date = {2003},
+	file = {manyfaces.pdf:/Users/anthony/Library/Application Support/Zotero/Profiles/ej4g1ifd.default/zotero/storage/D3GZI6R2/manyfaces.pdf:application/pdf}
+}
+
 @article{hashem_rise_2015,
 	title = {The rise of “big data” on cloud computing: {Review} and open research issues},
 	volume = {47},
@@ -13,4 +26,20 @@
 	month = jan,
 	year = {2015},
 	pages = {98--115}
+}
+
+@article{kamburugamuve_framework_2015,
+	title = {A Framework for Real Time Processing of Sensor Data in the Cloud},
+	volume = {2015},
+	issn = {1687-725X, 1687-7268},
+	url = {http://www.hindawi.com/journals/js/2015/468047/},
+	doi = {10.1155/2015/468047},
+	pages = {1--11},
+	journaltitle = {Journal of Sensors},
+	author = {Kamburugamuve, Supun and Christiansen, Leif and Fox, Geoffrey},
+	urldate = {2016-09-16},
+	date = {2015},
+	langid = {english},
+	keywords = {cloud, realtime, real-time, real time, sensor},
+	file = {Kamburugamuve et al. - 2015 - A Framework for Real Time Processing of Sensor Dat.pdf:/Users/anthony/Library/Application Support/Zotero/Profiles/ej4g1ifd.default/zotero/storage/X9HPU5JG/Kamburugamuve et al. - 2015 - A Framework for Real Time Processing of Sensor Dat.pdf:application/pdf}
 }
