--- a/litreview.tex
+++ b/litreview.tex
@@ -125,9 +125,9 @@ The Who}
 \nocite{*}
 
 %%% Input file for bibliography
-%\bibliography{example}
+\bibliography{litreview}
 %% Use this for an alphabetically organized bibliography
-%\bibliographystyle{plain}
+\bibliographystyle{plain}
 %% Use this for a reference order organized bibliography
 %\bibliographystyle{unsrt}
 
