Commiting what I have for today's meeting

--- a/litreview.bib
+++ b/litreview.bib
@@ -41,5 +41,149 @@
 	date = {2015},
 	langid = {english},
 	keywords = {cloud, realtime, real-time, real time, sensor},
-	file = {Kamburugamuve et al. - 2015 - A Framework for Real Time Processing of Sensor Dat.pdf:/Users/anthony/Library/Application Support/Zotero/Profiles/ej4g1ifd.default/zotero/storage/X9HPU5JG/Kamburugamuve et al. - 2015 - A Framework for Real Time Processing of Sensor Dat.pdf:application/pdf}
 }
+
+@ARTICLE{6072197,
+    author={D. Reed and J. R. Larus and D. Gannon},
+    journal={Computer},
+    title={Imagining the Future: Thoughts on Computing},
+    year={2012},
+    volume={45},
+    number={1},
+    pages={25-30},
+    keywords={cloud computing;computer applications;computer science education;Dan Reed;Microsoft;cloud architecture;cloud capabilities;computer science education;computing;Cloud computing;Network security;Privacy;Technological innovation;Cloud computing;Computer systems;Datacenter design;Networking;Parallel programming;User interfaces},
+    doi={10.1109/MC.2011.327},
+    ISSN={0018-9162},
+    month={Jan},}
+
+
+@article{zaslavsky_sensing_2013,
+    title = {Sensing as a service and big data},
+    url = {http://arxiv.org/abs/1301.0159},
+    journaltitle = {{arXiv} preprint {arXiv}:1301.0159},
+    author = {Zaslavsky, Arkady and Perera, Charith and Georgakopoulos, Dimitrios},
+    urldate = {2016-10-25},
+    date = {2013},
+}
+
+
+@article{chen_big_2014,
+    title = {Big Data: A Survey},
+    volume = {19},
+    issn = {1383-469X, 1572-8153},
+    url = {http://link.springer.com/10.1007/s11036-013-0489-0},
+    doi = {10.1007/s11036-013-0489-0},
+    shorttitle = {Big Data},
+    pages = {171--209},
+    number = {2},
+    journaltitle = {Mobile Networks and Applications},
+    author = {Chen, Min and Mao, Shiwen and Liu, Yunhao},
+    urldate = {2016-10-25},
+    date = {2014-04},
+    langid = {english},
+}
+
+
+@article{botta_integration_2016,
+    title = {Integration of Cloud computing and Internet of Things: A survey},
+    volume = {56},
+    issn = {0167739X},
+    url = {http://linkinghub.elsevier.com/retrieve/pii/S0167739X15003015},
+    doi = {10.1016/j.future.2015.09.021},
+    shorttitle = {Integration of Cloud computing and Internet of Things},
+    pages = {684--700},
+    journaltitle = {Future Generation Computer Systems},
+    author = {Botta, Alessio and de Donato, Walter and Persico, Valerio and Pescapé, Antonio},
+    urldate = {2016-11-01},
+    date = {2016-03},
+    langid = {english},
+}
+
+
+@article{khanghahi_new_2014,
+    title = {A New Approach Towards Integrated Cloud Computing Architecture},
+    volume = {4},
+    url = {http://sdiwc.net/digital-library/a-new-approach-towards-integrated-cloud-computing-architecture},
+    pages = {24--34},
+    number = {1},
+    journaltitle = {International Journal of Digital Information and Wireless Communications ({IJDIWC})},
+    author = {Khanghahi, Niloofar and Nasiri, Ramin and Davoudi, Mahsa Razavi},
+    urldate = {2016-11-01},
+    date = {2014},
+}
+
+
+@article{wang_survey_2015,
+    title = {A survey on data center networking for cloud computing},
+    volume = {91},
+    issn = {13891286},
+    url = {http://linkinghub.elsevier.com/retrieve/pii/S138912861500300X},
+    doi = {10.1016/j.comnet.2015.08.040},
+    pages = {528--547},
+    journaltitle = {Computer Networks},
+    author = {Wang, Bin and Qi, Zhengwei and Ma, Ruhui and Guan, Haibing and Vasilakos, Athanasios V.},
+    urldate = {2016-11-01},
+    date = {2015-11},
+    langid = {english},
+}
+
+
+@inproceedings{shen_cloudscale_2011,
+    title = {Cloudscale: elastic resource scaling for multi-tenant cloud systems},
+    url = {http://dl.acm.org/citation.cfm?id=2038921},
+    shorttitle = {Cloudscale},
+    pages = {5},
+    booktitle = {Proceedings of the 2nd {ACM} Symposium on Cloud Computing},
+    publisher = {{ACM}},
+    author = {Shen, Zhiming and Subbiah, Sethuraman and Gu, Xiaohui and Wilkes, John},
+    urldate = {2014-11-09},
+    date = {2011},
+}
+
+@article{qi_sierpinski_2014,
+    title = {Sierpinski triangle based data center architecture in cloud computing},
+    volume = {69},
+    issn = {0920-8542, 1573-0484},
+    url = {http://link.springer.com/10.1007/s11227-014-1187-9},
+    doi = {10.1007/s11227-014-1187-9},
+    pages = {887--907},
+    number = {2},
+    journaltitle = {The Journal of Supercomputing},
+    author = {Qi, Han and Shiraz, Muhammad and Gani, Abdullah and Whaiduzzaman, Md and Khan, Suleman},
+    urldate = {2016-11-01},
+    date = {2014-08},
+    langid = {english},
+}
+
+
+@article{khethavath_towards_2016,
+    title = {Towards an efficient distributed cloud computing architecture},
+    issn = {1936-6442, 1936-6450},
+    url = {http://link.springer.com/10.1007/s12083-016-0468-x},
+    doi = {10.1007/s12083-016-0468-x},
+    journaltitle = {Peer-to-Peer Networking and Applications},
+    author = {Khethavath, Praveenkumar and Thomas, Johnson P. and Chan-tin, Eric},
+    urldate = {2016-11-01},
+    date = {2016-05-31},
+    langid = {english},
+}
+
+@article{mell2011nist,
+    title={The NIST definition of cloud computing},
+    author={Mell, Peter and Grance, Tim},
+    year={2011}
+}
+
+@Book{pcast,
+    author={President's Council of Advisors on Science and Technology (U.S.), author},
+    title={Report to the President, big data and privacy : a technology perspective.},
+    year={2014},
+    publisher={Washington, District of Columbia : Executive Office of the President, President's Council of Advisors on Science and Technology},
+    keywords={Big data -- Government policy -- United States},
+    keywords={Privacy, Right of -- United States},
+    keywords={Data mining -- Technological innovations -- Government policy -- United States},
+    keywords={Information services -- Government policy -- United States},
+    note={Includes bibliographical references.}
+}
+
+
