--- a/litreview.tex
+++ b/litreview.tex
@@ -59,7 +59,7 @@
 %% The other members of your committee, seperated by "\\". Again, no titles,
 %% and it is customary to list the outside committee member (if you have one)
 %% last.
-\othermembers{John Doe\\
+\othermembers{Milton Garces\\
 Jane Doe\\
 The Who}
 %% The field in which you are obtaining your degree, capitalized normally.
@@ -74,7 +74,7 @@ The Who}
 %% to tell old drafts from new ones. Final actual documents omit this
 %% automatically so you can use it without fear of submission problems at the
 %% end. If you do not define this parameter, it defaults to "1.0.0".
-\versionnum{0.0.1}
+\versionnum{0.0.2}
 
 %%% End of preamble
 \begin{document}
@@ -108,7 +108,7 @@ The Who}
 
 \end{frontmatter}
 
-\include{introduction}
+%\include{introduction}
 
 
 %\normalsize
