--- a/introduction.tex
+++ b/introduction.tex
@@ -3,6 +3,14 @@ The exponential increase in volume, variety, velocity, veracity, and value of da
 
 Cloud computing frameworks can provide on-demand availability and scaling of virtual computing resources for storage, processing, and analyzing of very large data sets in real-time or near real-time. This model makes it possible to build applications in the cloud for dealing with Big Data sets such as those produced from large distributed sensor networks. Software for cloud environments include distributed fault-tolerant databases and distributed parallel algorithms for computer clusters. 
 
-By using the cloud as a central sink of data for our devices within a sensor network, it's possible to take advantage of central repositories of information, localized dynamic computing resources, and parallel computations. With the advent of cheap and ubiquitous network connections, it's becoming easier to do less processing within sensor networks and to offload the work to a distributed set of servers and processes in the cloud\cite{kamburugamuve_framework_2015}.
+By using the cloud as a central sink of data for our devices within a sensor network, it's possible to take advantage of central repositories of information, localized dynamic computing resources, and parallel computations.  With the advent of cheap and ubiquitous network connections, it's becoming easier to do less processing within sensor networks and to offload the work to a distributed set of servers and processes in the cloud\cite{kamburugamuve_framework_2015}.
+
+\section{Cloud Computing}
+
+\section{Sensor Networks and Cloud Computing}
+
+\section{Mobile Cloud Computing}
 
 This review hopes to summarize the current state of the art of using cloud computing for real-time analysis of distributed sensor networks. 
+
+-- Need more sources on how moving to cloud can reduce costs and be good for big data and scalability
