--- a/litreview.bib
+++ b/litreview.bib
@@ -186,4 +186,29 @@
     note={Includes bibliographical references.}
 }
 
+@INPROCEEDINGS{5980904,
+    author={A. Jin and C. Cheng and F. Ren and S. Song},
+    booktitle={2011 19th International Conference on Geoinformatics},
+    title={An index model of global subdivision in cloud computing environment},
+    year={2011},
+    pages={1-5},
+    keywords={cloud computing;distributed databases;geographic information systems;grid computing;parallel programming;Google-like infrastructure;MapReduce;application layer;cloud computing;global subdivision grid;management layer;multilevel index model;parallel programming;point retrieval;range retrieval;remote sensing image;scalable distributed file system;server layer;service layer;spatial object;spatial retrieval;special grid retrieval;storage layer;topological retrieval;Cloud computing;Computational modeling;Data models;Geographic Information Systems;Indexes;Servers;Spatial databases;cloud computing;global subdivision;key-value},
+    doi={10.1109/GeoInformatics.2011.5980904},
+    ISSN={2161-024X},
+    month={June},}
+
+
+@article{vogels_eventually_2008,
+    title = {Eventually consistent},
+    volume = {6},
+    url = {http://dl.acm.org/citation.cfm?id=1466448},
+    number = {6},
+    urldate = {2016-12-10},
+    journal = {Queue},
+    author = {Vogels, Werner},
+    year = {2008},
+    pages = {14--19},
+}
+
+
 
