--- a/litreview.bib
+++ b/litreview.bib
@@ -210,5 +210,16 @@
     pages = {14--19},
 }
 
+@article{gilbert2002brewer,
+    title={Brewer's conjecture and the feasibility of consistent, available, partition-tolerant web services},
+    author={Gilbert, Seth and Lynch, Nancy},
+    journal={ACM SIGACT News},
+    volume={33},
+    number={2},
+    pages={51--59},
+    year={2002},
+    publisher={ACM}
+}
+
 
 
